--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,10 @@
     "@types/d3": "^7.4.0",
     "d3": "^7.7.0",
     "jarallax": "^2.0.4",
+    "nest-winston": "^1.8.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "winston": "^3.8.2",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
