--- a/server/package.json
+++ b/server/package.json
@@ -34,10 +34,12 @@
     "@nestjs/typeorm": "^9.0.1",
     "js-yaml": "^4.1.0",
     "migrate": "^1.8.0",
+    "nest-winston": "^1.8.0",
     "process": "^0.11.10",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
